--- a/web-mobile/style-mobile.25fc5.css
+++ b/web-mobile/style-mobile.25fc5.css
@@ -87,7 +87,7 @@ p.footer {
   left: 0;
   width: 100%;
   height: 100%;
-  background: #171717 url(./splash.85cfd.png) no-repeat center;
+  background: #F1C2CA url(./splash.85cfd.png) no-repeat center;
   background-size: 45%;
 }
 
